# relay-rs

./: .env.example  .gitignore  Cargo.toml  README-cpy.md  README.md  test_sqlite.rs
docs/: DEV_NOTES.md  HLD.md  LLD.md
src/: db.rs  main.rs
src/sinks/: http.rs  kafka.rs  mod.rs  stdout.rs
src/storage/: mod.rs  rocksdb.rs  sled.rs  sqlite.rs
