[package]
name = "relay-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "relay-rs"
path = "src/main.rs"

[[bin]]
name = "test_sqlite"
path = "test_sqlite.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
# Optional backend dependencies (commented out until implemented)
# rocksdb = "0.21"
# sled = "0.34"
